meja/tests/shadowing-module.meja
module M = {
  type t;
};

module M = {
  type u;
};
